tests/baselines/reference/unqualifiedCallToClassStatic1.errors.txt
unqualifiedCallToClassStatic1.ts(4,3): error TS2662: Cannot find name 'foo'. Did you mean the static member 'Vector.foo'?


==== unqualifiedCallToClassStatic1.ts (1 errors) ====
    class Vector {
     static foo = () => {
      // 'foo' cannot be called in an unqualified manner.
      foo();
      ~~~
!!! error TS2662: Cannot find name 'foo'. Did you mean the static member 'Vector.foo'?
     }
    }